# chamfer

./: README.md  bindings.cpp  chamfer.h  pyproject.toml  setup.py
